alfred: Fix version number for git builds of vis
Signed-off-by: Sven Eckelmann <sven@narfation.org>

--- a/vis/Makefile
+++ b/vis/Makefile
@@ -49,7 +49,7 @@ PREFIX = /usr/local
 SBINDIR = $(PREFIX)/sbin
 
 # try to generate revision
-REVISION= $(shell	if [ -d .git ]; then \
+REVISION= $(shell	if [ -d ../.git ]; then \
 				echo $$(git describe --always --dirty --match "v*" |sed 's/^v//' 2> /dev/null || echo "[unknown]"); \
 			fi)
 ifneq ($(REVISION),)
