--- a/vis/Makefile
+++ b/vis/Makefile
@@ -18,11 +18,11 @@
 # 02110-1301, USA
 #
 
-# alfred build
-BINARY_NAME = vis
+# batadv-vis build
+BINARY_NAME = batadv-vis
 OBJ = vis.o debugfs.o
 
-# alfred flags and options
+# batadv-vis flags and options
 CFLAGS += -pedantic -Wall -W -std=gnu99 -fno-strict-aliasing -MD -MP
 LDLIBS += -lrt
 
