--- a/gpsd/Makefile
+++ b/gpsd/Makefile
@@ -1,7 +1,7 @@
 #!/usr/bin/make -f
 # -*- makefile -*-
 #
-# Copyright (C) 2012 B.A.T.M.A.N. contributors
+# Copyright (C) 2013 B.A.T.M.A.N. contributors
 #
 # This program is free software; you can redistribute it and/or
 # modify it under the terms of version 2 of the GNU General Public
@@ -18,14 +18,12 @@
 # 02110-1301, USA
 #
 
-# alfred build
-BINARY_NAME = alfred
-OBJ = main.o server.o client.o netsock.o send.o recv.o hash.o unix_sock.o util.o debugfs.o batadv_query.o
-MANPAGE = man/alfred.8
+# alfred-gpsd build
+BINARY_NAME = alfred-gpsd
+OBJ = alfred-gpsd.o
 
 # alfred flags and options
 CFLAGS += -pedantic -Wall -W -std=gnu99 -fno-strict-aliasing -MD -MP
-LDLIBS += -lrt
 
 # disable verbose output
 ifneq ($(findstring $(MAKEFLAGS),s),s)
@@ -36,6 +34,24 @@ ifndef V
 	export Q_LD
 endif
 endif
+
+ifeq ($(origin PKG_CONFIG), undefined)
+  PKG_CONFIG = pkg-config
+  ifeq ($(shell which $(PKG_CONFIG) 2>/dev/null),)
+    $(error $(PKG_CONFIG) not found)
+  endif
+endif
+
+ifeq ($(origin LIBGPS_CFLAGS) $(origin LIBGPS_LDLIBS), undefined undefined)
+  LIBGPS_NAME ?= libgps
+  ifeq ($(shell $(PKG_CONFIG) --modversion $(LIBGPS_NAME) 2>/dev/null),)
+    $(error No $(LIBGPS_NAME) development libraries found!)
+  endif
+  LIBGPS_CFLAGS += $(shell $(PKG_CONFIG) --cflags $(LIBGPS_NAME))
+  LIBGPS_LDLIBS +=  $(shell $(PKG_CONFIG) --libs $(LIBGPS_NAME))
+endif
+CFLAGS += $(LIBGPS_CFLAGS)
+LDLIBS += $(LIBGPS_LDLIBS)
 
 # standard build tools
 CC ?= gcc
@@ -48,31 +64,17 @@ LINK.o = $(Q_LD)$(CC) $(CFLAGS) $(LDFLAGS) $(TARGET_ARCH)
 # standard install paths
 PREFIX = /usr/local
 SBINDIR = $(PREFIX)/sbin
-MANDIR = $(PREFIX)/share/man
 
 # try to generate revision
-REVISION= $(shell	if [ -d .git ]; then \
+REVISION= $(shell	if [ -d ../.git ]; then \
 				echo $$(git describe --always --dirty --match "v*" |sed 's/^v//' 2> /dev/null || echo "[unknown]"); \
 			fi)
 ifneq ($(REVISION),)
 CPPFLAGS += -DSOURCE_VERSION=\"$(REVISION)\"
 endif
 
-ifneq ($(CONFIG_ALFRED_VIS),n)
-	VIS_ALL=vis-all
-	VIS_CLEAN=vis-clean
-	VIS_INSTALL=vis-install
-endif
-
-ifneq ($(CONFIG_ALFRED_GPSD),n)
-	GPSD_ALL=gpsd-all
-	GPSD_CLEAN=gpsd-clean
-	GPSD_INSTALL=gpsd-install
-endif
-
-
 # default target
-all: $(BINARY_NAME) $(VIS_ALL) $(GPSD_ALL)
+all: $(BINARY_NAME)
 
 # standard build rules
 .SUFFIXES: .o .c
@@ -82,36 +84,15 @@ all: $(BINARY_NAME) $(VIS_ALL) $(GPSD_ALL)
 $(BINARY_NAME): $(OBJ)
 	$(LINK.o) $^ $(LDLIBS) -o $@
 
-clean:	$(VIS_CLEAN) $(GPSD_CLEAN)
+clean:
 	$(RM) $(BINARY_NAME) $(OBJ) $(DEP)
 
-install: $(BINARY_NAME) $(VIS_INSTALL) $(GPSD_INSTALL)
+install: $(BINARY_NAME)
 	$(MKDIR) $(DESTDIR)$(SBINDIR)
-	$(MKDIR) $(DESTDIR)$(MANDIR)/man8
 	$(INSTALL) -m 0755 $(BINARY_NAME) $(DESTDIR)$(SBINDIR)
-	$(INSTALL) -m 0644 $(MANPAGE) $(DESTDIR)$(MANDIR)/man8
-
-vis-install:
-	$(MAKE) -C vis install
-
-vis-all:
-	$(MAKE) -C vis all
-
-vis-clean:
-	$(MAKE) -C vis clean
-
-gpsd-install:
-	$(MAKE) -C gpsd install
-
-gpsd-all:
-	$(MAKE) -C gpsd all
-
-gpsd-clean:
-	$(MAKE) -C gpsd clean
 
 # load dependencies
 DEP = $(OBJ:.o=.d)
 -include $(DEP)
 
-.PHONY: all clean install vis-install vis-all vis-clean \
-	gpsd-install gpsd-all gpsd-clean
+.PHONY: all clean install
