alfred: Split list of objects in Makefile into separate lines
The line of objects which are required to compile alfred gets longer and
becomes harder to read. Instead save each object on its own line to make it
easier to edit and easier to solve conflicts when multiple patches modify
the list of objects.

Signed-off-by: Sven Eckelmann <sven.eckelmann@open-mesh.com>
Signed-off-by: Simon Wunderlich <sw@simonwunderlich.de>

--- a/gpsd/Makefile
+++ b/gpsd/Makefile
@@ -20,7 +20,7 @@
 
 # alfred-gpsd build
 BINARY_NAME = alfred-gpsd
-OBJ = alfred-gpsd.o
+OBJ += alfred-gpsd.o
 MANPAGE = man/alfred-gpsd.8
 
 # alfred flags and options
