alfred: Enable _GNU_SOURCE by default
alfred uses any netlink library which is (more or less) compatible with
libnl-3. This is for example libnl-tiny on OpenWrt.

Programs and libraries which are build against libnl-tiny must be build
with _GNU_SOURCE enabled to have some types in its headers defined. Thus
_GNU_SOURCE is enabled in the OpenWrt alfred package since 2016.3. But
sometimes using _GNU_SOURCE and sometimes not using it can have severe side
effects which are non-trivial to debug when the developer is not also using
the same _GNU_SOURCE preprocessor define. Thus enable _GNU_SOURCE by
default to have similar behavior (defines, type definitions, structure
members, ...) from headers like on OpenWrt.

Signed-off-by: Sven Eckelmann <sven@narfation.org>
Signed-off-by: Simon Wunderlich <sw@simonwunderlich.de>

--- a/gpsd/Makefile
+++ b/gpsd/Makefile
@@ -25,6 +25,7 @@ MANPAGE = man/alfred-gpsd.8
 
 # alfred flags and options
 CFLAGS += -pedantic -Wall -W -std=gnu99 -fno-strict-aliasing -MD -MP
+CPPFLAGS += -D_GNU_SOURCE
 
 # disable verbose output
 ifneq ($(findstring $(MAKEFLAGS),s),s)
