alfred: Use optimized C/C++ git-diff algorithm
Signed-off-by: Sven Eckelmann <sven@narfation.org>

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,7 @@
 # SPDX-License-Identifier: GPL-2.0
 # License-Filename: LICENSES/preferred/GPL-2.0
 
+*.[ch] diff=cpp
+
 /.gitignore export-ignore
 /.gitattributes export-ignore
